# nlp-etl

./: .gitignore  README.md  pyproject.toml  setup.cfg
nlp_etl/: settings.py
src/: main.py
