[build-system]
requires = [
    "setuptools >= 40.6.2",
    "wheel >= 0.30.0",
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "nlp-etl"
version = "1.0.0"
description = ""
authors = ["Kristen Foster-Marks <kristen.foster.marks@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.4"
spacy = "3.2"

[tool.poetry.dev-dependencies]
pytest = "^3.4"