
[metadata]
name = nlp-etl
version = 1

[options]
python_requires = >= 3.7
package_dir =
     = src
packages = find:
include_package_data = True
install_requires =
    hvac>=0.10.0
    psycopg2-binary>=2.9.0
    python-json-logger>=2.0.2

[options.package_data]
* = *.sql

[options.extras_require]
test =
    pytest
    pytest-coverage

[options.packages.find]
where = src
